[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/PauseMenu.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://scenes/ui/InventoryDetailsPanel.tscn" id="2_inventory"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 20
process_mode = 3
script = ExtResource("1_script")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="Dim" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.45)

[node name="Panel" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -260.0
offset_right = 420.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="Control/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ResumeButton" type="Button" parent="Control/Panel/MarginContainer/VBox"]
layout_mode = 2
text = "ゲーム再開"

[node name="LangRow" type="HBoxContainer" parent="Control/Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="LangLabel" type="Label" parent="Control/Panel/MarginContainer/VBox/LangRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "言語"

[node name="LangOption" type="OptionButton" parent="Control/Panel/MarginContainer/VBox/LangRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InventoryDetailsPanel" parent="Control/Panel/MarginContainer/VBox" instance=ExtResource("2_inventory")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
